* allow theme to set minimum height of orphans for code blocks (#2304)
* introduce `scale` theme key for admonition icon to scale down icon without affecting layout (#2318)
* introduce `width` theme key for admonition icon to control width of image-based icon (#2318)
* share image info cache between primary and scratch documents to avoid decoding same image more than once

Bug Fixes::

* keep caret between items in menu macro with previous item if items wrap

== 2.3.0 (2022-08-16) - @mojavelinux

Enhancements::

* place footnotes directly below last block of content if `footnotes-margin-top` theme key is 0 (#2291)
* allow page / column break to be forced using `always` option (e.g., `[%always]`) (#2300)
* insert column break instead of page break in multi-column layout if `column` role is specified on page break macro (#2293)
* use relative font size for big and small roles (#2307)
* use default-for-print theme by default if media is `print` or `prepress` (#2306)
* support text alignment roles on all styled paragraphs
* support text alignment roles on verse block

Bug Fixes::

* only indent text that starts at left margin (i.e., when text align is left or justify) (#2298)
* apply text transform and formatting when checking height of heading for orphan prevention
* apply text transform and formatting when computing height of background for caption
* honor theme settings (`prose-margin-inner` and `prose-text-indent-inner`) for inner paragraphs in abstract
* prevent footnote label from being split across lines (#2297)
* keep footnote label with preceding text if adjacent (#2297)
* strip formatting added to source block by custom subs when syntax highlighter is enabled (#2086)

Compliance::

* remove support for deprecated `spread` role on table

=== Details

{url-repo}/releases/tag/v2.3.0[git tag] | {url-repo}/compare/v2.2.0\...v2.3.0[full diff]

== 2.2.0 (2022-07-22) - @mojavelinux

Enhancements::
