@@ -16,6 +16,7 @@ Enhancements::
 * introduce `scale` theme key for admonition icon to scale down icon without affecting layout (#2318)
 * introduce `width` theme key for admonition icon to control width of image-based icon (#2318)
 * share image info cache between primary and scratch documents to avoid decoding same image more than once
+* rename `kbd-separator` theme key to `kbd-separator-content` to make its consistent with other content keys; remap old key and warn
 
 Bug Fixes::
 
